fixed overflow error on main page

--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,8 @@ html {
     padding: 0;
     width: 100%;
     height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header {
@@ -29,12 +31,6 @@ body {
     margin: 0px;
     background: white;
     font-family: calibri;
-}
-
-html,
-body {
-    max-width: 100%;
-    overflow-x: hidden;
 }
 
 header img {
